# vim-config

./: .gitignore  README.md  cpptags  install-dotfiles.sh  install-nvim.sh  install.sh  russian.vim  vimrc
after/ftplugin/: .tags  asm.vim  c.vim  cpp.vim  haskell.vim  html.vim  idlang.vim  javascript.vim  llvm.vim  markdown.vim  mysql.vim  nasm.vim  netrw.vim  purescript.vim  python.vim  qf.vim  qml.vim  ruby.vim  rust.vim  sh.vim  sql.vim  tex.vim  typescript.vim  vim.vim
autoload/: add_map.vim  command_tab.vim  commentate.vim  completion_aggreg.vim  curlman.vim  hs_cabal.vim  listchars.vim  long_line.vim  netrw_sidebar.vim  put_replace.vim  question_register.vim  swapwindows.vim  tabcopybuffer.vim
autoload/ftplugin/: rust.vim
colors/: .tags  apprentice.vim  blues.vim
dotfiles/: bashrc  haskeline  inputrc  zshrc
dotfiles/ghc/: Morj_Ghci_Prompt.hs  Morjlude.hs  ghci.conf
plugin/: Tabmerge.vim  addmap.vim  command_tab.vim  commentate.vim  completion-aggreg.vim  completion_aggreg.vim  curlman.vim  diff.vim  ghci.vim  listchars.vim  long_line.vim  matchit.vim  netrw-sidebar.vim  omnicopmlete_fix.vim  put_replace.vim  quickfix.vim  replace-all.vim  romain-git.vim  search.vim  swapwindows.vim  tabcopybuffer.vim  termcode_fix.vim  underline.vim
plugin/plugin-settings/: airline.vim  ale.vim  autopairs.vim  clang_complete.vim  codi.vim  completion-aggreg.vim  delimitmate.vim  easytags.vim  exchange.vim  fugitive.vim  ghc-mod.vim  gitgutter.vim  haskell-conseal.vim  haskell-vim.vim  lexima.vim  lsp.vim  (+14 more)
templates/: Main.hs  cabal.cabal  package.yaml  stack.yaml
(+5 files in other folders)
