name:                
version:             0.1.0.0
cabal-version:       >=1.10
build-type:          Simple
license:             BSD3
author:              "d86leader"
maintainer:          "d86leader@mail.com"
synopsis:            Does stuff

executable app-exe
  main-is:             Main.hs
  hs-source-dirs:      src
  default-language: Haskell2010
  ghc-options:
    -threaded
    -rtsopts
    -with-rtsopts=-N
    -Wall -Wcompat
  build-depends: base
